--- a/index.html
+++ b/index.html
@@ -6248,9 +6248,8 @@ var $author$project$Page$ListPosts$fetchPosts = $elm$http$Http$get(
 			$author$project$Post$postsDecoder),
 		url: 'http://localhost:7890/api/v1/posts/'
 	});
-var $author$project$Page$ListPosts$init = _Utils_Tuple2(
-	{posts: $krisajenkins$remotedata$RemoteData$Loading},
-	$author$project$Page$ListPosts$fetchPosts);
+var $author$project$Page$ListPosts$initialModel = {deleteError: $elm$core$Maybe$Nothing, posts: $krisajenkins$remotedata$RemoteData$Loading};
+var $author$project$Page$ListPosts$init = _Utils_Tuple2($author$project$Page$ListPosts$initialModel, $author$project$Page$ListPosts$fetchPosts);
 var $elm$core$Platform$Cmd$map = _Platform_map;
 var $elm$core$Platform$Cmd$none = $elm$core$Platform$Cmd$batch(_List_Nil);
 var $author$project$Main$initCurrentPage = function (_v0) {
@@ -6852,21 +6851,62 @@ var $author$project$Page$EditPost$update = F2(
 				}
 		}
 	});
+var $author$project$Page$ListPosts$PostDeleted = function (a) {
+	return {$: 'PostDeleted', a: a};
+};
+var $elm$http$Http$expectString = function (toMsg) {
+	return A2(
+		$elm$http$Http$expectStringResponse,
+		toMsg,
+		$elm$http$Http$resolve($elm$core$Result$Ok));
+};
+var $author$project$Page$ListPosts$deletePost = function (postId) {
+	return $elm$http$Http$request(
+		{
+			body: $elm$http$Http$emptyBody,
+			expect: $elm$http$Http$expectString($author$project$Page$ListPosts$PostDeleted),
+			headers: _List_Nil,
+			method: 'DELETE',
+			timeout: $elm$core$Maybe$Nothing,
+			tracker: $elm$core$Maybe$Nothing,
+			url: 'http://localhost:7890/api/v1/posts/' + $author$project$Post$idToString(postId)
+		});
+};
 var $author$project$Page$ListPosts$update = F2(
 	function (msg, model) {
-		if (msg.$ === 'FetchPosts') {
-			return _Utils_Tuple2(
-				_Utils_update(
+		switch (msg.$) {
+			case 'FetchPosts':
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{posts: $krisajenkins$remotedata$RemoteData$Loading}),
+					$author$project$Page$ListPosts$fetchPosts);
+			case 'PostsReceived':
+				var response = msg.a;
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{posts: response}),
+					$elm$core$Platform$Cmd$none);
+			case 'DeletePost':
+				var postId = msg.a;
+				return _Utils_Tuple2(
 					model,
-					{posts: $krisajenkins$remotedata$RemoteData$Loading}),
-				$author$project$Page$ListPosts$fetchPosts);
-		} else {
-			var response = msg.a;
-			return _Utils_Tuple2(
-				_Utils_update(
-					model,
-					{posts: response}),
-				$elm$core$Platform$Cmd$none);
+					$author$project$Page$ListPosts$deletePost(postId));
+			default:
+				if (msg.a.$ === 'Ok') {
+					return _Utils_Tuple2(model, $author$project$Page$ListPosts$fetchPosts);
+				} else {
+					var error = msg.a.a;
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{
+								deleteError: $elm$core$Maybe$Just(
+									$author$project$Error$buildErrorMessage(error))
+							}),
+						$elm$core$Platform$Cmd$none);
+				}
 		}
 	});
 var $author$project$Main$update = F2(
@@ -7178,6 +7218,27 @@ var $author$project$Page$EditPost$view = function (model) {
 			]));
 };
 var $author$project$Page$ListPosts$FetchPosts = {$: 'FetchPosts'};
+var $author$project$Page$ListPosts$viewDeleteError = function (maybeError) {
+	if (maybeError.$ === 'Just') {
+		var error = maybeError.a;
+		return A2(
+			$elm$html$Html$div,
+			_List_Nil,
+			_List_fromArray(
+				[
+					A2(
+					$elm$html$Html$h3,
+					_List_Nil,
+					_List_fromArray(
+						[
+							$elm$html$Html$text('Error deleting post')
+						])),
+					$elm$html$Html$text('Error: ' + error)
+				]));
+	} else {
+		return $elm$html$Html$text('');
+	}
+};
 var $elm$html$Html$table = _VirtualDom_node('table');
 var $author$project$Page$ListPosts$viewFetchError = function (errorMessage) {
 	var errorHeading = 'Couldn\'t fetch posts at this time.';
@@ -7195,6 +7256,9 @@ var $author$project$Page$ListPosts$viewFetchError = function (errorMessage) {
 					])),
 				$elm$html$Html$text('Error: ' + errorMessage)
 			]));
+};
+var $author$project$Page$ListPosts$DeletePost = function (a) {
+	return {$: 'DeletePost', a: a};
 };
 var $elm$html$Html$a = _VirtualDom_node('a');
 var $elm$html$Html$Attributes$href = function (url) {
@@ -7255,6 +7319,24 @@ var $author$project$Page$ListPosts$viewPost = function (post) {
 						_List_fromArray(
 							[
 								$elm$html$Html$text('Edit')
+							]))
+					])),
+				A2(
+				$elm$html$Html$td,
+				_List_Nil,
+				_List_fromArray(
+					[
+						A2(
+						$elm$html$Html$button,
+						_List_fromArray(
+							[
+								$elm$html$Html$Attributes$type_('button'),
+								$elm$html$Html$Events$onClick(
+								$author$project$Page$ListPosts$DeletePost(post.id))
+							]),
+						_List_fromArray(
+							[
+								$elm$html$Html$text('Delete')
 							]))
 					]))
 			]));
@@ -7350,7 +7432,8 @@ var $author$project$Page$ListPosts$view = function (model) {
 					[
 						$elm$html$Html$text('Refresh posts')
 					])),
-				$author$project$Page$ListPosts$viewPosts(model.posts)
+				$author$project$Page$ListPosts$viewPosts(model.posts),
+				$author$project$Page$ListPosts$viewDeleteError(model.deleteError)
 			]));
 };
 var $author$project$Main$currentView = function (model) {
