--- a/index.html
+++ b/index.html
@@ -5369,6 +5369,12 @@ var $author$project$Main$ListPage = function (a) {
 var $author$project$Main$ListPageMsg = function (a) {
 	return {$: 'ListPageMsg', a: a};
 };
+var $author$project$Main$NewPage = function (a) {
+	return {$: 'NewPage', a: a};
+};
+var $author$project$Main$NewPageMsg = function (a) {
+	return {$: 'NewPageMsg', a: a};
+};
 var $elm$core$Platform$Cmd$batch = _Platform_batch;
 var $author$project$Page$EditPost$PostReceived = function (a) {
 	return {$: 'PostReceived', a: a};
@@ -6222,7 +6228,7 @@ var $author$project$Page$EditPost$fetchPost = function (postId) {
 				$elm$http$Http$expectJson,
 				A2($elm$core$Basics$composeR, $krisajenkins$remotedata$RemoteData$fromResult, $author$project$Page$EditPost$PostReceived),
 				$author$project$Post$postDecoder),
-			url: 'http://localhost:7890/api/v1/posts/' + $author$project$Post$idToString(postId)
+			url: 'https://intense-sea-62412.herokuapp.com/api/v1/posts/' + $author$project$Post$idToString(postId)
 		});
 };
 var $krisajenkins$remotedata$RemoteData$Loading = {$: 'Loading'};
@@ -6246,12 +6252,25 @@ var $author$project$Page$ListPosts$fetchPosts = $elm$http$Http$get(
 			$elm$http$Http$expectJson,
 			A2($elm$core$Basics$composeR, $krisajenkins$remotedata$RemoteData$fromResult, $author$project$Page$ListPosts$PostsReceived),
 			$author$project$Post$postsDecoder),
-		url: 'http://localhost:7890/api/v1/posts/'
+		url: 'https://intense-sea-62412.herokuapp.com/api/v1/posts/'
 	});
 var $author$project$Page$ListPosts$initialModel = {deleteError: $elm$core$Maybe$Nothing, posts: $krisajenkins$remotedata$RemoteData$Loading};
 var $author$project$Page$ListPosts$init = _Utils_Tuple2($author$project$Page$ListPosts$initialModel, $author$project$Page$ListPosts$fetchPosts);
-var $elm$core$Platform$Cmd$map = _Platform_map;
+var $elm$core$Basics$negate = function (n) {
+	return -n;
+};
+var $author$project$Post$emptyPostId = $author$project$Post$PostId(-1);
+var $author$project$Post$emptyPost = {fruit: '', id: $author$project$Post$emptyPostId, name: '', post: ''};
+var $author$project$Page$NewPost$initialModel = function (navKey) {
+	return {createError: $elm$core$Maybe$Nothing, navKey: navKey, post: $author$project$Post$emptyPost};
+};
 var $elm$core$Platform$Cmd$none = $elm$core$Platform$Cmd$batch(_List_Nil);
+var $author$project$Page$NewPost$init = function (navKey) {
+	return _Utils_Tuple2(
+		$author$project$Page$NewPost$initialModel(navKey),
+		$elm$core$Platform$Cmd$none);
+};
+var $elm$core$Platform$Cmd$map = _Platform_map;
 var $author$project$Main$initCurrentPage = function (_v0) {
 	var model = _v0.a;
 	var existingCmds = _v0.b;
@@ -6267,7 +6286,7 @@ var $author$project$Main$initCurrentPage = function (_v0) {
 				return _Utils_Tuple2(
 					$author$project$Main$ListPage(pageModel),
 					A2($elm$core$Platform$Cmd$map, $author$project$Main$ListPageMsg, pageCmds));
-			default:
+			case 'Post':
 				var postId = _v2.a;
 				var _v4 = A2($author$project$Page$EditPost$init, postId, model.navKey);
 				var pageModel = _v4.a;
@@ -6275,6 +6294,13 @@ var $author$project$Main$initCurrentPage = function (_v0) {
 				return _Utils_Tuple2(
 					$author$project$Main$EditPage(pageModel),
 					A2($elm$core$Platform$Cmd$map, $author$project$Main$EditPageMsg, pageCmd));
+			default:
+				var _v5 = $author$project$Page$NewPost$init(model.navKey);
+				var pageModel = _v5.a;
+				var pageCmd = _v5.b;
+				return _Utils_Tuple2(
+					$author$project$Main$NewPage(pageModel),
+					A2($elm$core$Platform$Cmd$map, $author$project$Main$NewPageMsg, pageCmd));
 		}
 	}();
 	var currentPage = _v1.a;
@@ -6288,6 +6314,7 @@ var $author$project$Main$initCurrentPage = function (_v0) {
 				[existingCmds, mappedPageCmds])));
 };
 var $author$project$Route$NotFound = {$: 'NotFound'};
+var $author$project$Route$NewPost = {$: 'NewPost'};
 var $author$project$Route$Post = function (a) {
 	return {$: 'Post', a: a};
 };
@@ -6468,7 +6495,14 @@ var $author$project$Route$matchRoute = $elm$url$Url$Parser$oneOf(
 			A2(
 				$elm$url$Url$Parser$slash,
 				$elm$url$Url$Parser$s('posts'),
-				$author$project$Post$idParser))
+				$author$project$Post$idParser)),
+			A2(
+			$elm$url$Url$Parser$map,
+			$author$project$Route$NewPost,
+			A2(
+				$elm$url$Url$Parser$slash,
+				$elm$url$Url$Parser$s('posts'),
+				$elm$url$Url$Parser$s('new')))
 		]));
 var $elm$url$Url$Parser$getFirstMatch = function (states) {
 	getFirstMatch:
@@ -6692,9 +6726,11 @@ var $author$project$Route$routeToString = function (route) {
 			return '/not-found';
 		case 'Posts':
 			return '/posts/';
-		default:
+		case 'Post':
 			var postId = route.a;
 			return '/posts/' + $author$project$Post$idToString(postId);
+		default:
+			return '/posts/new';
 	}
 };
 var $author$project$Route$pushUrl = F2(
@@ -6753,7 +6789,7 @@ var $author$project$Post$postEncoder = function (post) {
 var $author$project$Page$EditPost$savePost = function (post) {
 	if (post.$ === 'Success') {
 		var postData = post.a;
-		var postUrl = 'http://localhost:7890/api/v1/posts/' + $author$project$Post$idToString(postData.id);
+		var postUrl = 'https://intense-sea-62412.herokuapp.com/api/v1/posts/' + $author$project$Post$idToString(postData.id);
 		return $elm$http$Http$request(
 			{
 				body: $elm$http$Http$jsonBody(
@@ -6869,7 +6905,7 @@ var $author$project$Page$ListPosts$deletePost = function (postId) {
 			method: 'DELETE',
 			timeout: $elm$core$Maybe$Nothing,
 			tracker: $elm$core$Maybe$Nothing,
-			url: 'http://localhost:7890/api/v1/posts/' + $author$project$Post$idToString(postId)
+			url: 'https://intense-sea-62412.herokuapp.com/api/v1/posts/' + $author$project$Post$idToString(postId)
 		});
 };
 var $author$project$Page$ListPosts$update = F2(
@@ -6909,10 +6945,102 @@ var $author$project$Page$ListPosts$update = F2(
 				}
 		}
 	});
+var $author$project$Page$NewPost$PostCreated = function (a) {
+	return {$: 'PostCreated', a: a};
+};
+var $author$project$Post$newPostEncoder = function (post) {
+	return $elm$json$Json$Encode$object(
+		_List_fromArray(
+			[
+				_Utils_Tuple2(
+				'name',
+				$elm$json$Json$Encode$string(post.name)),
+				_Utils_Tuple2(
+				'post',
+				$elm$json$Json$Encode$string(post.post)),
+				_Utils_Tuple2(
+				'fruit',
+				$elm$json$Json$Encode$string(post.fruit))
+			]));
+};
+var $elm$http$Http$post = function (r) {
+	return $elm$http$Http$request(
+		{body: r.body, expect: r.expect, headers: _List_Nil, method: 'POST', timeout: $elm$core$Maybe$Nothing, tracker: $elm$core$Maybe$Nothing, url: r.url});
+};
+var $author$project$Page$NewPost$createPost = function (post) {
+	return $elm$http$Http$post(
+		{
+			body: $elm$http$Http$jsonBody(
+				$author$project$Post$newPostEncoder(post)),
+			expect: A2($elm$http$Http$expectJson, $author$project$Page$NewPost$PostCreated, $author$project$Post$postDecoder),
+			url: 'https://intense-sea-62412.herokuapp.com/api/v1/posts'
+		});
+};
+var $author$project$Page$NewPost$update = F2(
+	function (msg, model) {
+		switch (msg.$) {
+			case 'StoreName':
+				var name = msg.a;
+				var oldPost = model.post;
+				var updateName = _Utils_update(
+					oldPost,
+					{name: name});
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{post: updateName}),
+					$elm$core$Platform$Cmd$none);
+			case 'StorePost':
+				var post = msg.a;
+				var oldPost = model.post;
+				var updatePost = _Utils_update(
+					oldPost,
+					{post: post});
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{post: updatePost}),
+					$elm$core$Platform$Cmd$none);
+			case 'StoreFruit':
+				var fruit = msg.a;
+				var oldPost = model.post;
+				var updateFruit = _Utils_update(
+					oldPost,
+					{fruit: fruit});
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{post: updateFruit}),
+					$elm$core$Platform$Cmd$none);
+			case 'CreatePost':
+				return _Utils_Tuple2(
+					model,
+					$author$project$Page$NewPost$createPost(model.post));
+			default:
+				if (msg.a.$ === 'Ok') {
+					var post = msg.a.a;
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{createError: $elm$core$Maybe$Nothing, post: post}),
+						A2($author$project$Route$pushUrl, $author$project$Route$Posts, model.navKey));
+				} else {
+					var error = msg.a.a;
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{
+								createError: $elm$core$Maybe$Just(
+									$author$project$Error$buildErrorMessage(error))
+							}),
+						$elm$core$Platform$Cmd$none);
+				}
+		}
+	});
 var $author$project$Main$update = F2(
 	function (msg, model) {
 		var _v0 = _Utils_Tuple2(msg, model.page);
-		_v0$4:
+		_v0$5:
 		while (true) {
 			switch (_v0.a.$) {
 				case 'ListPageMsg':
@@ -6930,7 +7058,7 @@ var $author$project$Main$update = F2(
 								}),
 							A2($elm$core$Platform$Cmd$map, $author$project$Main$ListPageMsg, updatedCmd));
 					} else {
-						break _v0$4;
+						break _v0$5;
 					}
 				case 'LinkClicked':
 					var urlRequest = _v0.a.a;
@@ -6957,7 +7085,7 @@ var $author$project$Main$update = F2(
 								model,
 								{route: newRoute}),
 							$elm$core$Platform$Cmd$none));
-				default:
+				case 'EditPageMsg':
 					if (_v0.b.$ === 'EditPage') {
 						var subMsg = _v0.a.a;
 						var pageModel = _v0.b.a;
@@ -6972,7 +7100,24 @@ var $author$project$Main$update = F2(
 								}),
 							A2($elm$core$Platform$Cmd$map, $author$project$Main$EditPageMsg, updatedCmd));
 					} else {
-						break _v0$4;
+						break _v0$5;
+					}
+				default:
+					if (_v0.b.$ === 'NewPage') {
+						var subMsg = _v0.a.a;
+						var pageModel = _v0.b.a;
+						var _v4 = A2($author$project$Page$NewPost$update, subMsg, pageModel);
+						var updatedPageModel = _v4.a;
+						var updatedCmd = _v4.b;
+						return _Utils_Tuple2(
+							_Utils_update(
+								model,
+								{
+									page: $author$project$Main$NewPage(updatedPageModel)
+								}),
+							A2($elm$core$Platform$Cmd$map, $author$project$Main$NewPageMsg, updatedCmd));
+					} else {
+						break _v0$5;
 					}
 			}
 		}
@@ -7218,6 +7363,13 @@ var $author$project$Page$EditPost$view = function (model) {
 			]));
 };
 var $author$project$Page$ListPosts$FetchPosts = {$: 'FetchPosts'};
+var $elm$html$Html$a = _VirtualDom_node('a');
+var $elm$html$Html$Attributes$href = function (url) {
+	return A2(
+		$elm$html$Html$Attributes$stringProperty,
+		'href',
+		_VirtualDom_noJavaScriptUri(url));
+};
 var $author$project$Page$ListPosts$viewDeleteError = function (maybeError) {
 	if (maybeError.$ === 'Just') {
 		var error = maybeError.a;
@@ -7259,13 +7411,6 @@ var $author$project$Page$ListPosts$viewFetchError = function (errorMessage) {
 };
 var $author$project$Page$ListPosts$DeletePost = function (a) {
 	return {$: 'DeletePost', a: a};
-};
-var $elm$html$Html$a = _VirtualDom_node('a');
-var $elm$html$Html$Attributes$href = function (url) {
-	return A2(
-		$elm$html$Html$Attributes$stringProperty,
-		'href',
-		_VirtualDom_noJavaScriptUri(url));
 };
 var $elm$html$Html$td = _VirtualDom_node('td');
 var $elm$html$Html$tr = _VirtualDom_node('tr');
@@ -7400,7 +7545,7 @@ var $author$project$Page$ListPosts$viewPosts = function (posts) {
 						_List_Nil,
 						_List_fromArray(
 							[
-								$elm$html$Html$text('Posts')
+								$elm$html$Html$text('Elm Posts')
 							])),
 						A2(
 						$elm$html$Html$table,
@@ -7432,8 +7577,142 @@ var $author$project$Page$ListPosts$view = function (model) {
 					[
 						$elm$html$Html$text('Refresh posts')
 					])),
+				A2($elm$html$Html$br, _List_Nil, _List_Nil),
+				A2($elm$html$Html$br, _List_Nil, _List_Nil),
+				A2(
+				$elm$html$Html$a,
+				_List_fromArray(
+					[
+						$elm$html$Html$Attributes$href('/posts/new')
+					]),
+				_List_fromArray(
+					[
+						$elm$html$Html$text('New post')
+					])),
 				$author$project$Page$ListPosts$viewPosts(model.posts),
 				$author$project$Page$ListPosts$viewDeleteError(model.deleteError)
+			]));
+};
+var $author$project$Page$NewPost$CreatePost = {$: 'CreatePost'};
+var $author$project$Page$NewPost$StoreFruit = function (a) {
+	return {$: 'StoreFruit', a: a};
+};
+var $author$project$Page$NewPost$StoreName = function (a) {
+	return {$: 'StoreName', a: a};
+};
+var $author$project$Page$NewPost$StorePost = function (a) {
+	return {$: 'StorePost', a: a};
+};
+var $author$project$Page$NewPost$newPostForm = A2(
+	$elm$html$Html$form,
+	_List_Nil,
+	_List_fromArray(
+		[
+			A2(
+			$elm$html$Html$div,
+			_List_Nil,
+			_List_fromArray(
+				[
+					$elm$html$Html$text('Name'),
+					A2($elm$html$Html$br, _List_Nil, _List_Nil),
+					A2(
+					$elm$html$Html$input,
+					_List_fromArray(
+						[
+							$elm$html$Html$Attributes$type_('text'),
+							$elm$html$Html$Events$onInput($author$project$Page$NewPost$StoreName)
+						]),
+					_List_Nil)
+				])),
+			A2($elm$html$Html$br, _List_Nil, _List_Nil),
+			A2(
+			$elm$html$Html$div,
+			_List_Nil,
+			_List_fromArray(
+				[
+					$elm$html$Html$text('Message'),
+					A2($elm$html$Html$br, _List_Nil, _List_Nil),
+					A2(
+					$elm$html$Html$input,
+					_List_fromArray(
+						[
+							$elm$html$Html$Attributes$type_('text'),
+							$elm$html$Html$Events$onInput($author$project$Page$NewPost$StorePost)
+						]),
+					_List_Nil)
+				])),
+			A2($elm$html$Html$br, _List_Nil, _List_Nil),
+			A2(
+			$elm$html$Html$div,
+			_List_Nil,
+			_List_fromArray(
+				[
+					$elm$html$Html$text('Associated Fruit'),
+					A2($elm$html$Html$br, _List_Nil, _List_Nil),
+					A2(
+					$elm$html$Html$input,
+					_List_fromArray(
+						[
+							$elm$html$Html$Attributes$type_('text'),
+							$elm$html$Html$Events$onInput($author$project$Page$NewPost$StoreFruit)
+						]),
+					_List_Nil)
+				])),
+			A2($elm$html$Html$br, _List_Nil, _List_Nil),
+			A2(
+			$elm$html$Html$div,
+			_List_Nil,
+			_List_fromArray(
+				[
+					A2(
+					$elm$html$Html$button,
+					_List_fromArray(
+						[
+							$elm$html$Html$Attributes$type_('button'),
+							$elm$html$Html$Events$onClick($author$project$Page$NewPost$CreatePost)
+						]),
+					_List_fromArray(
+						[
+							$elm$html$Html$text('Submit')
+						]))
+				]))
+		]));
+var $author$project$Page$NewPost$viewError = function (maybeError) {
+	if (maybeError.$ === 'Just') {
+		var error = maybeError.a;
+		return A2(
+			$elm$html$Html$div,
+			_List_Nil,
+			_List_fromArray(
+				[
+					A2(
+					$elm$html$Html$h3,
+					_List_Nil,
+					_List_fromArray(
+						[
+							$elm$html$Html$text('Couldn\'t create a post at this time.')
+						])),
+					$elm$html$Html$text('Error: ' + error)
+				]));
+	} else {
+		return $elm$html$Html$text('');
+	}
+};
+var $author$project$Page$NewPost$view = function (model) {
+	return A2(
+		$elm$html$Html$div,
+		_List_Nil,
+		_List_fromArray(
+			[
+				A2(
+				$elm$html$Html$h3,
+				_List_Nil,
+				_List_fromArray(
+					[
+						$elm$html$Html$text('Create New Post')
+					])),
+				$author$project$Page$NewPost$newPostForm,
+				$author$project$Page$NewPost$viewError(model.createError)
 			]));
 };
 var $author$project$Main$currentView = function (model) {
@@ -7447,12 +7726,18 @@ var $author$project$Main$currentView = function (model) {
 				$elm$html$Html$map,
 				$author$project$Main$ListPageMsg,
 				$author$project$Page$ListPosts$view(pageModel));
-		default:
+		case 'EditPage':
 			var pageModel = _v0.a;
 			return A2(
 				$elm$html$Html$map,
 				$author$project$Main$EditPageMsg,
 				$author$project$Page$EditPost$view(pageModel));
+		default:
+			var pageModel = _v0.a;
+			return A2(
+				$elm$html$Html$map,
+				$author$project$Main$NewPageMsg,
+				$author$project$Page$NewPost$view(pageModel));
 	}
 };
 var $author$project$Main$view = function (model) {
