change the redirect Route after posting or editing

--- a/index.html
+++ b/index.html
@@ -6725,7 +6725,7 @@ var $author$project$Route$routeToString = function (route) {
 		case 'NotFound':
 			return '/not-found';
 		case 'Posts':
-			return '/posts/';
+			return '/';
 		case 'Post':
 			var postId = route.a;
 			return '/posts/' + $author$project$Post$idToString(postId);
